tests/expected_invalid_generic_call_wrong_arity.diag.out
<input>:9:5: error: generic function 'identity' expects 1 type argument(s), got 2
        support::identity<Int, Text>(7)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
